--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -129,7 +129,7 @@
                     Muestra el contenido de una carpeta.
                   </div>
                   <div class="comandos">
-                    <input type="text" class="text" value="ls -l" oninput="ajustarAncho(this)">
+                    <input type="text" class="text" value="ls" oninput="ajustarAncho(this)">
                     <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
@@ -366,7 +366,7 @@
 
                 <div class="contenedor">
                   <div class="etiqueta">
-                    Te convierte en el usuario con máximos privilegios al proporcionar la contraseña.
+                    Te convierte en el usuario con máximos privilegios al proporcionar la contraseña (Esto permite acceder y modificar cualquier parte del sistema, lo que es esencial para tareas de configuración, instalación y mantenimiento críticas. Ser root otorga control total sobre el sistema operativo, pero también conlleva el riesgo de causar daños irreparables si se usan mal esos poderes).
                   </div>
                   <div class="comandos">
                     <input type="text" class="text" value="sudo su" oninput="ajustarAncho(this)">
