--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -135,6 +135,79 @@
                 <p>\( L_{\text{total}} = \frac{1}{\frac{13}{300}} \, \text{mH} \)</p>
                 <p>\( L_{\text{total}} = \frac{300}{13} \, \text{mH} \)</p>
                 <p>\( L_{\text{total}} = \frac{300}{13} \, \text{mH} \approx 23.07 \, \text{mH} \)</p>
+                <h2>Ley de Coulomb</h2>
+                <p>La Ley de Coulomb es un principio fundamental de la electrostática en la física, formulada por el científico Charles-Augustin de Coulomb. Esta ley establece que la fuerza eléctrica entre dos cargas puntuales es directamente proporcional al producto de sus magnitudes de carga y inversamente proporcional al cuadrado de la distancia entre ellas. En resumen, la Ley de Coulomb describe cómo las cargas eléctricas interactúan entre sí a través de fuerzas eléctricas, similar a cómo la gravedad afecta a las masas en la Ley de Gravitación Universal de Newton.</p>
+                <div class="blog-image-grande">
+                    <img src="media/calculo1-1.png" alt="">
+                </div>
+                <ul>
+                    <li>Carga 1 (q<sub>1</sub>) = 0.82 μC = 0.00000082 C</li>
+                    <li>Carga 2 (q<sub>2</sub>) = 0.47 μC = 0.00000047 C</li>
+                    <li>Distancia (r) = 0.21 m</li>
+                    <li>Constante (K) = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</li>
+                </ul>
+                <p>\( F = K\frac{q_{1}*q_{2}}{r^{2}} \)</p>
+                <p>\( F = (9x10^{9} \frac{Nm^{2}}{C^{2}}) \frac{0.82x10^{-6}C*0.47x10^{-6}C}{0.21m^{2}} \)</p>
+                <p>\( F = 0.079N \)</p>
+                <div class="blog-image-grande">
+                    <img src="media/calculo1-2.png" alt="">
+                </div>
+                <ul>
+                    <li>Carga 1 (q<sub>1</sub>) = 4 nC </li>
+                    <li>Carga 2 (q<sub>2</sub>) = 6 nC </li>
+                    <li>Carga 3 (q<sub>3</sub>) = 8 nC </li>
+                    <li>Distancia 1 (r) = 8 cm</li>
+                    <li>Distancia 2 (r) = 12 cm</li>
+                    <li>Constante (K) = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</li>
+                </ul>
+                <p><strong>Fuerza q<sub>1</sub> y q<sub>2</sub></strong></p>
+                <p>\( F_{1} = K\frac{q_{1}*q_{2}}{r^{2}} \)</p>
+                <p>\( F_{1} = (9x10^{9} \frac{Nm^{2}}{C^{2}}) \frac{4x10^{-9}C*6x10^{-9}C}{0.08m^{2}} \)</p>
+                <p>\( F_{1} = 3.375x10^{-5}N \)</p>
+                <p><strong>Fuerza q<sub>2</sub> y q<sub>3</sub></strong></p>
+                <p>\( F_{2} = (9x10^{9} \frac{Nm^{2}}{C^{2}}) \frac{6x10^{-9}C*8x10^{-9}C}{0.12m^{2}} \)</p>
+                <p>\( F_{2} = 3x10^{-5}N \)</p>
+                <p><strong>Fuerza Resultante</strong></p>
+                <p>Para calcular la fuerza resultante, se tiene que tomar en cuenta que las fuerzas que actúan sobre q<sub>2</sub> van en sentidos contrarios y sobre el mismo eje. Por lo tanto, se tiene que realizar una suma de fuerzas de la siguiente manera:</p>
+                <p>Cuando la fuerza va hacia la derecha, se toma como una fuerza positiva; en caso contrario, tendrá signo negativo.</p>
+                <p>\( F_{R} = 3x10^{-5}N - 3.375x10^{-5}N \)</p>
+                <p>\( F_{R} = -3.75x10^{-6}N \)</p>
+                <p>\( F_{R} = 3.75x10^{-6}N \)</p>
+                <div class="blog-image-grande">
+                    <img src="media/calculo1-3.png" alt="">
+                </div>
+                <ul>
+                    <li>Carga 1 (q<sub>1</sub>) = 0.14 μC </li>
+                    <li>Carga 2 (q<sub>2</sub>) = 0.14 μC </li>
+                    <li>Carga 3 (q<sub>3</sub>) = 0.14 μC </li>
+                    <li>Carga 4 (q<sub>4</sub>) = 0.14 μC </li>
+                    <li>Distancia (r) = 25 cm</li>
+                    <li>Constante (K) = 9x10<sup>9</sup> \( \frac{Nm^{2}}{C^{2}} \)</li>
+                </ul>
+                <p>Para este ejercicio, se analizará el valor de la carga para la carga inferior izquierda, que será denominada como q<sub>4</sub>.</p>
+                <p>Basándose en el gráfico que nos muestra cómo actúan las cargas entre sí, tenemos que existen 3 fuerzas en diversos sentidos actuando, resultando en una fuerza de repulsión sobre q<sub>4</sub>.</p>
+                <p><strong>Fuerza q<sub>4</sub> y q<sub>3</sub></strong></p>
+                <p>\( F_{1} = (9x10^{9} \frac{Nm^{2}}{C^{2}}) \frac{0.14x10^{-6}C*0.14x10^{-6}C}{0.25m^{2}} \)</p>
+                <p>\( F_{1} = 2.82x10^{-3}N (i) \)</p>
+                <p>La fuerza tiene dirección a lo largo del eje x.</p>
+                <p><strong>Fuerza q<sub>4</sub> y q<sub>2</sub></strong></p>
+                <p>\( F_{2} = -2.82x10^{-3}N (j) \)</p>
+                <p>La fuerza tiene dirección a lo largo del eje y.</p>
+                <p><strong>Fuerza q<sub>4</sub> y q<sub>1</sub></strong></p>
+                <p><em>r</em>² = <em>a</em>² + <em>b</em>²</p>
+                <p>\(r^2 = 25^2 + 25^2 = 1250\)</p>
+                <p>\(r = \sqrt{1250} = 35.36\, \text{cm}\)</p>
+                <p>\( F_{3} = (9x10^{9} \frac{Nm^{2}}{C^{2}}) \frac{0.14x10^{-6}C*0.14x10^{-6}C}{0.35m^{2}} \)</p>
+                <p>\( F_{3} = 1.44x10^{-3}N (i, j) \)</p>
+                <p>\( F_{3} = 1.44x10^{-3} (Cos 45, Sen 45) \)</p>
+                <p>\( F_{3} = 1.018x10^{-3}N (i) - 1.018x10^{-3}N (j) \)</p>
+                <p>La fuerza tiene actua en el eje x y.</p>
+                <p><strong>Fuerza Resultante</strong></p>
+                <p>\( F_{R} = 2.82x10^{-3}i - 2.82x10^{-3}j + 1.018x10^{-3}i - 1.018x10^{-3}j \)</p>
+                <p>\( F_{R} = 3.838x10^{-3}i - 3.838x10^{-3}j \)</p>
+                <p>\(F{R} = \sqrt{(3.838)^{2} + (-3.838)^{2}} \)</p>
+                <p>\(F{R} = \sqrt{2.94x10^{-5}} \)</p>
+                <p>\(F{R} = 5.42x10^{-3}N \)</p>
                 <h2>Mallas</h2>
                 <p>La Ley de Voltajes de Kirchhoff (Ley de Mallas) establece que la suma algebraica de los voltajes en un circuito cerrado (malla) es igual a cero. Esto se deriva de la conservación de la energía.</p>
                 <p>\( \sum V_{\text{subida}} - \sum V_{\text{bajada}} = 0 \)</p>
