--- a/network.html
+++ b/network.html
@@ -64,7 +64,15 @@
         <div class="article-section">
             <img src="media/imagen2.png" alt="Telnet y SSH" class="article-image">
             <h2><a href="network/ssh.html">Telnet y SSH</a></h2>
-        </div>     
+        </div>  
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="ICMP" class="article-image">
+            <h2><a href="network/icmp.html">ICMP</a></h2>
+        </div>
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="ARP" class="article-image">
+            <h2><a href="network/arp.html">ARP</a></h2>
+        </div>   
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
