--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -135,6 +135,35 @@
                 <p>\( L_{\text{total}} = \frac{1}{\frac{13}{300}} \, \text{mH} \)</p>
                 <p>\( L_{\text{total}} = \frac{300}{13} \, \text{mH} \)</p>
                 <p>\( L_{\text{total}} = \frac{300}{13} \, \text{mH} \approx 23.07 \, \text{mH} \)</p>
+                <h2>Ley de Joule</h2>
+                <p>La Ley de Joule es un principio en la física que establece la relación entre la energía eléctrica, la corriente eléctrica, la resistencia eléctrica y el calor generado en un conductor eléctrico. Fue formulada por el físico británico James Prescott Joule en la década de 1840 y es fundamental en la comprensión de cómo se comporta la electricidad en circuitos y cómo se transforma la energía eléctrica en otras formas de energía, como el calor.</p>
+
+                <p>La Ley de Joule establece que la cantidad de calor generado (\(Q\)) en un conductor eléctrico es directamente proporcional al cuadrado de la corriente (\(I\)) que fluye a través del conductor, a la resistencia (\(R\)) del conductor y al tiempo (\(t\)) durante el cual fluye la corriente. Matemáticamente, se expresa como:</p>
+
+                <p>\(Q = I^2 \cdot R \cdot t\)</p>
+
+                <p>Donde:</p>
+                <ul>
+                  <li>\(Q\) es la cantidad de calor generada (en joules).</li>
+                  <li>\(I\) es la corriente que fluye a través del conductor (en amperios).</li>
+                  <li>\(R\) es la resistencia del conductor (en ohmios).</li>
+                  <li>\(t\) es el tiempo durante el cual fluye la corriente (en segundos).</li>
+                </ul>
+                <p>Supongamos que tenemos \(Q = 2000 \, \text{J}\), \(I = 5 \, \text{A}\) y \(t = 2 \, \text{horas}\).</p>
+                <p>1J = 0.24 cal</p>
+                <p>La fórmula de la Ley de Joule para calcular la resistencia es:</p>
+                <p>\(R = \frac{Q}{I^2 \cdot t}\)</p>
+                <p>Primero, convirtamos el tiempo a segundos:</p>
+                <p>\(t = 2 \, \text{horas} = 2 \times 3600 \, \text{segundos} = 7200 \, \text{segundos}\)</p>
+                <p>Ahora, calculemos la resistencia:</p>
+                <p>\(R = \frac{2000 \, \text{J}}{(5 \, \text{A})^2 \cdot 7200 \, \text{segundos}}\)</p>
+                <p>\(R = 0.0111 \, \Omega\)</p>
+                <p>Por lo tanto, con los valores dados, la resistencia sería aproximadamente \(0.0556 \, \Omega\).</p>
+                <p>V = RI</p>
+                <p>Q = IVt</p>
+                <p>\(V = \frac{Q}{I \cdot t} = \frac{2000 \, \text{J}}{5 \, \text{A} \cdot 2 \, \text{horas}}\)</p>
+                <p>\(V = \frac{2000 \, \text{J}}{5 \, \text{A} \cdot 7200 \, \text{segundos}}\)</p>
+                <p>\(V = 0.0556 \, \text{V}\)</p>
                 <h2>Ley de Coulomb</h2>
                 <p>La Ley de Coulomb es un principio fundamental de la electrostática en la física, formulada por el científico Charles-Augustin de Coulomb. Esta ley establece que la fuerza eléctrica entre dos cargas puntuales es directamente proporcional al producto de sus magnitudes de carga y inversamente proporcional al cuadrado de la distancia entre ellas. En resumen, la Ley de Coulomb describe cómo las cargas eléctricas interactúan entre sí a través de fuerzas eléctricas, similar a cómo la gravedad afecta a las masas en la Ley de Gravitación Universal de Newton.</p>
                 <div class="blog-image-grande">
