--- a/network/arp.html
+++ b/network/arp.html
@@ -88,6 +88,18 @@
                 <div class="blog-image-grande">
                     <img src="media/protocolos5.png" alt="">
                 </div>
+                <h2>Ataques Relacionados a ARP</h2>
+                <ul style="list-style-type: circle;">
+                    <li>ARP Spoofing (ARP Poisoning): En este ataque, un atacante envía mensajes ARP falsificados a los dispositivos en la red para asociar su dirección MAC con la dirección IP de otro dispositivo legítimo. Esto puede hacer que el tráfico de red pase por el atacante, lo que le permite interceptar y analizar el tráfico. También puede llevar a la suplantación de identidad.</li>
+                    <li>ARP Cache Poisoning: Similar al ARP Spoofing, este ataque implica enviar respuestas ARP falsas a los dispositivos de la red, en un intento de corromper sus tablas de caché ARP. Esto puede causar que los dispositivos legítimos se comuniquen con el atacante en lugar del dispositivo real al que estaban intentando acceder.</li>
+                    <li>ARP DOS (Denial of Service): Los atacantes pueden inundar la red con mensajes ARP falsos o repetidos, lo que puede abrumar las tablas ARP de los dispositivos, causando una degradación del rendimiento o incluso una interrupción completa del tráfico de red.</li>
+                    <li>ARP MiTM (Man-in-the-Middle): En este escenario, el atacante intercepta el tráfico entre dos dispositivos legítimos. Esto se logra al enviar mensajes ARP falsificados a ambas partes, lo que hace que crean que están comunicándose directamente entre sí mientras el atacante actúa como intermediario.</li>
+                    <li>ARP Hijacking: En lugar de interceptar el tráfico, un atacante puede reemplazar la dirección MAC de una máquina legítima en la tabla ARP de un dispositivo objetivo con su propia dirección MAC. Esto permite al atacante recibir el tráfico destinado a la máquina legítima.</li>
+                    <li>ARP-Based VLAN Hopping: En este ataque, el atacante manipula las tablas ARP para moverse entre VLANs a las que normalmente no tendría acceso, lo que puede exponer segmentos de red sensibles.</li>
+                </ul>    
+                <div class="blog-image-grande">
+                    <img src="media/protocolo6.jpg" alt="">
+                </div>
                 <br>
                 <br>
             </div>   
