--- a/hacking.html
+++ b/hacking.html
@@ -49,6 +49,10 @@
             <img src="media/imagen4.png" alt="Linux" class="article-image">
             <h2><a href="hacking/linux.html">Comandos básicos de Linux</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Directorios del Sistema en Linux" class="article-image">
+            <h2><a href="hacking/linux2.html">Directorios del Sistema en Linux</a></h2>
+        </div>  
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="En proceso" class="article-image">
