--- a/hacking/linux2.html
+++ b/hacking/linux2.html
@@ -77,6 +77,7 @@
                     <li>/var - Datos Variables</li>
                     <p>El directorio '/var' almacena datos variables que cambian con el tiempo, como registros de sistema, correos electrónicos y archivos de caché.</p>
                 </ul>
+                <br>
                 <p>La estructura de directorios del sistema en Linux es una parte fundamental de su funcionamiento. Cada directorio tiene un propósito específico y contribuye al orden, rendimiento y funcionamiento del sistema operativo. Comprender la función de cada directorio es esencial para la administración y el mantenimiento.</p>
                 <div class="blog-image-grande">
                     <img src="media/linux2-1.jpg" alt="">
@@ -126,6 +127,29 @@
                 <div class="blog-image-grande">
                     <img src="media/linux2-2.jpg" alt="">
                 </div>
+                <h2>Diferencias y Ventajas</h2>
+                <p>Cada método de instalación de Linux tiene sus propias características y ventajas. A continuación, detallamos las diferencias entre usar máquinas virtuales, particiones de disco y un USB booteable, junto con las ventajas específicas de la partición y las precauciones al usar un USB booteable:</p>
+                <ul style="list-style-type: square;">
+                    <li>Máquinas Virtuales:</li>
+                    <ul>
+                        <li>Diferencias: Las máquinas virtuales (VMs) permiten ejecutar un sistema operativo dentro de otro. No afectan el sistema anfitrión y brindan un entorno aislado para probar Linux. La instalación se realiza en un archivo virtual, lo que facilita la eliminación o la duplicación.</li>
+                        <li>Ventajas: No se modifican las particiones del sistema anfitrión, lo que garantiza la seguridad y evita conflictos con otros sistemas operativos. Puedes experimentar con múltiples distribuciones de Linux sin comprometer la estabilidad del sistema principal.</li>
+                    </ul>
+                    <li>Particiones de Disco:</li>
+                    <ul>
+                        <li>Diferencias: La instalación en particiones de disco crea una instalación nativa en una partición del disco duro. Puede ser un proceso más involucrado, ya que requiere la reorganización del espacio en disco y la configuración de particiones.</li>
+                        <li>Ventajas: Obtienes un rendimiento óptimo, ya que Linux se ejecuta directamente en el hardware. Tienes acceso completo a los recursos del sistema y no estás limitado por la capa de virtualización. Puedes configurar tu sistema para que Linux sea el sistema operativo principal.</li>
+                    </ul>
+                    <li>USB Booteable:</li>
+                    <ul>
+                        <li>Diferencias: Instalar Linux desde un USB booteable implica arrancar tu computadora directamente desde el USB y luego seguir el proceso de instalación. No requiere particionar el disco duro.</li>
+                        <li>Ventajas: Es una forma portable de instalar Linux, ya que puedes usar el mismo USB en diferentes sistemas. Puedes probar Linux antes de comprometerte a una instalación permanente. Ideal para sistemas que no deseas modificar o que no te pertenecen.</li>
+                    </ul>
+                </ul>
+                <br>
+                <p>Al instalar Linux en una partición, puedes tener ambos sistemas operativos en la misma máquina. Esto te permite aprovechar los beneficios de ambos mundos y alternar entre ellos según tus necesidades.</p>
+                <p>Al usar un USB booteable para instalar Linux, asegúrate de seleccionar la opción de instalación adecuada (por ejemplo, "Instalar junto a Windows" o "Otro" según la distribución). Si no tienes cuidado, podrías sobrescribir Windows y perder tus datos.</p>
+                <p>En resumen, la elección entre máquinas virtuales, particiones de disco y un USB booteable depende de tus necesidades y preferencias. Las máquinas virtuales son ideales para experimentar de manera segura, mientras que las particiones de disco ofrecen un rendimiento óptimo. Los USB booteables son convenientes para probar Linux y pueden ser una forma eficiente de instalación, pero se debe tener precaución para no eliminar accidentalmente Windows.</p>
                 <br>
                 <br>
             </div>   
