--- a/electronica.html
+++ b/electronica.html
@@ -54,8 +54,8 @@
             <h2><a href="electronica/inductancia.html">Inductor</a></h2>
         </div>
         <div class="article-section">
-            <img src="media/imagen1.png" alt="Cálculo básico de componentes electrónicos" class="article-image">
-            <h2><a href="electronica/calculo.html">Cálculo básico de componentes electrónicos</a></h2>
+            <img src="media/imagen1.png" alt="Cálculo de componentes electrónicos" class="article-image">
+            <h2><a href="electronica/calculo.html">Cálculo de Componentes Electrónicos</a></h2>
         </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
