--- a/hacking.html
+++ b/hacking.html
@@ -47,7 +47,7 @@
         </div>
         <div class="article-section">
             <img src="media/imagen4.png" alt="Linux" class="article-image">
-            <h2><a href="hacking/linux.html">Comandos básicos de Linux</a></h2>
+            <h2><a href="hacking/linux.html">Comandos Básicos de Linux</a></h2>
         </div>
         <div class="article-section">
             <img src="media/imagen4.png" alt="Directorios del Sistema en Linux" class="article-image">
