--- a/network/icmp.html
+++ b/network/icmp.html
@@ -38,8 +38,12 @@
             <div class="text__articulo-cover">
                 <h1>ICMP</h1>
                 <p>El Protocolo de Mensajes de Control de Internet (ICMP por sus siglas en inglés) es un componente fundamental de la suite de protocolos de Internet. ICMP opera en la capa de red del modelo OSI y se utiliza para el diagnóstico, control y gestión de redes IP. A través de sus diversos tipos de mensajes y códigos, ICMP proporciona información sobre el estado y la eficiencia de la comunicación en la red. </p>
-                <h2>Paquetes ICMP y Códigos</h2>
-                <p>Los mensajes ICMP son encapsulados en paquetes IP, lo que permite que los dispositivos de red intercambien información esencial para el funcionamiento y diagnóstico de la red. Cada mensaje ICMP contiene un campo de tipo y un campo de código que indican el propósito y la subclasificación del mensaje. Algunos tipos y códigos ICMP comunes incluyen:</p>
+                <h2>Paquetes ICMP</h2>
+                <p>Los mensajes ICMP son encapsulados en paquetes IP, lo que permite que los dispositivos de red intercambien información esencial para el funcionamiento y diagnóstico de la red. Cada mensaje ICMP contiene un campo de tipo y un campo de código que indican el propósito y la subclasificación del mensaje.</p>
+                <p>El "ping" es una utilidad de red utilizada para verificar la conectividad entre dos dispositivos en una red, generalmente una computadora cliente y un servidor. Su nombre proviene de la similitud con los sonidos que hacen los sonares en los submarinos para detectar objetos en su entorno. El ping envía pequeños paquetes de datos desde un dispositivo a otro y mide el tiempo que lleva que estos paquetes viajen de ida y vuelta. Esta medición se conoce como "tiempo de ida y vuelta" o "round-trip time" (RTT).</p>
+                <p>El ping se utiliza principalmente para diagnosticar problemas de conectividad en una red. Si los tiempos de ida y vuelta son consistentemente altos o si hay una alta tasa de paquetes perdidos, podría indicar problemas de congestión de red, latencia, problemas de enrutamiento o dispositivos inaccesibles.</p>
+                <p>Es importante tener en cuenta que no todos los dispositivos en una red pueden estar configurados para responder a los pings, por lo que un ping fallido no siempre indica un problema. Además, algunas redes pueden bloquear o limitar los paquetes ICMP por razones de seguridad.</p>
+                <p>Aquí te explico cómo funciona el proceso de ping:</p>
                 <ol>
                     <li>El Host A envía un paquete ICMP de solicitud de eco (ping) al Host B.</li>
                     <li>El Host B recibe el paquete y responde con un paquete ICMP de respuesta de eco.</li>
@@ -48,7 +52,7 @@
                 <div class="blog-image-grande">
                     <img src="media/protocolos.png" alt="">
                 </div>
-                <h2>Encabezado ICMP</h2>
+                <h2>Encabezado ICMP y Códigos</h2>
                 <p>El encabezado ICMP consta de varias partes esenciales que permiten a los dispositivos de red comunicarse y diagnosticar problemas en la red. Además del campo "Type" (Tipo), también está el campo "Code" (Código), que proporciona información adicional sobre la naturaleza específica del mensaje ICMP.</p>
                 <ul style="list-style-type: circle;">
                     <li>Tipo 0 (Echo Reply): Utilizado para responder a los mensajes de solicitud de eco (ping).</li>
@@ -62,6 +66,8 @@
                     <img src="media/protocolos1.png" alt="">
                 </div>
                 <p>El campo "Code" dentro del encabezado ICMP trabaja en conjunto con el campo "Type" para proporcionar detalles adicionales sobre el propósito del mensaje. Por ejemplo, para un mensaje ICMP de "Destino inalcanzable" (Type 3), el campo "Code" indica la razón exacta por la cual el destino es inalcanzable, como "Red inalcanzable", "Host inalcanzable", "Protocolo inalcanzable", etc.</p>
+                <p>Algunos tipos y códigos ICMP comunes incluyen:</p>
+                <br>
                 <p>Tipo 3: Destino inalcanzable</p>
                 <ul style="list-style-type: circle;">
                     <li>Código 0: Red inalcanzable.</li>
