--- a/hacking/linux2.html
+++ b/hacking/linux2.html
@@ -80,7 +80,7 @@
                 <br>
                 <p>La estructura de directorios del sistema en Linux es una parte fundamental de su funcionamiento. Cada directorio tiene un propósito específico y contribuye al orden, rendimiento y funcionamiento del sistema operativo. Comprender la función de cada directorio es esencial para la administración y el mantenimiento.</p>
                 <div class="blog-image-grande">
-                    <img src="media/linux2-1.jpg" alt="">
+                    <img src="media/linux2-1.png" alt="">
                 </div>
                 <h2>Instalación de Linux</h2>
                 <p>Instalar Linux es una experiencia enriquecedora que te brinda acceso a un sistema operativo robusto y de código abierto. Hay varias formas de instalar Linux, y en este artículo, exploraremos tres de los métodos más comunes: a través de máquinas virtuales, mediante particiones de disco y usando un USB booteable. Cada método tiene sus propias ventajas y desafíos, lo que te permite elegir el enfoque que mejor se adapte a tus necesidades.</p>
