--- a/ia/algoritmos.html
+++ b/ia/algoritmos.html
@@ -53,8 +53,8 @@
                 <p>Redes Neuronales Convolucionales (CNN): Especializadas en el procesamiento de imágenes, las CNN utilizan filtros y convoluciones para identificar patrones visuales y objetos.</p>
                 <p>Redes Neuronales Recurrentes (RNN): Diseñadas para trabajar con secuencias de datos, como texto o audio. Las RNN tienen conexiones que forman bucles para mantener una memoria temporal, lo que las hace adecuadas para tareas de procesamiento del lenguaje natural y traducción automática.</p>
                 <p>Aprendizaje por Refuerzo (Reinforcement Learning): En este enfoque, los algoritmos aprenden a través de la interacción con un entorno. Reciben recompensas o penalizaciones según sus acciones y buscan maximizar la recompensa a lo largo del tiempo.</p>
-                <div class="blog-image-blanco">
-                    <img src="media/algoritmo.png" alt="">
+                <div class="blog-image">
+                    <img src="media/algoritmo.jpg" alt="">
                 </div>
                 <h2>Funcionamiento</h2>
                 <p>Los algoritmos de Machine Learning son como cerebros electrónicos que aprenden de datos para tomar decisiones sin ser programados explícitamente. Analizan patrones y tendencias en la información para ofrecer predicciones y soluciones precisas, impulsando la inteligencia artificial hacia nuevas fronteras. Ahora, desentrañaremos su fascinante funcionamiento y descubriremos cómo transforman datos en conocimiento poderoso.</p>
