--- a/ia/deepLearning.html
+++ b/ia/deepLearning.html
@@ -56,8 +56,7 @@
                     <li>Vehículos autónomos: La conducción autónoma es posible gracias a redes neuronales profundas que analizan datos en tiempo real para tomar decisiones mientras conducen.</li>
                     <li>Salud y medicina: Los diagnósticos médicos se han mejorado significativamente gracias a aplicaciones de Deep Learning que ayudan a analizar imágenes médicas, detectar enfermedades y planificar tratamientos más efectivos.</li>
                 </ol>
-                <div class="blog-image-doble-grande">
-                    <img src="media/deep2.jpg" alt="">
+                <div class="blog-image-grande">
                     <img src="media/deep3.jpg" alt="">
                 </div>
                 <h2>Conceptos clave</h2>
@@ -94,6 +93,10 @@
                 </ul>        
                 <br>
                 <p>En resumen, el Machine Learning es una disciplina más amplia que abarca diversos enfoques para el aprendizaje a partir de datos, mientras que el Deep Learning es una técnica específica dentro del Machine Learning que utiliza redes neuronales profundas para aprender patrones y características complejas en grandes conjuntos de datos. El Deep Learning ha demostrado ser especialmente efectivo en tareas de alto nivel, como reconocimiento de imágenes, procesamiento del lenguaje natural y juegos de estrategia, impulsando avances significativos en el campo de la inteligencia artificial.</p>
+                <div class="blog-image-doble-grande">
+                    <img src="media/deep2.jpg" alt="">
+                    <img src="media/deep4.png" alt="">
+                </div>
                 <h2>Conclusión</h2>
                 <p>El Deep Learning es una emocionante área de la inteligencia artificial que ha revolucionado nuestra capacidad para resolver problemas complejos. A medida que la tecnología continúa evolucionando, podemos esperar más avances emocionantes en diversas industrias, lo que mejorará nuestras vidas y nos llevará a un futuro más inteligente y conectado. </p>
                 <br>
