--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -675,7 +675,7 @@
                         <div class="cell">0.45 + j0.05</div>
                     </div>
                     <div class="equals">=</div>
-                    <p>\( \frac{(1.875 ∠51.8^\circ)(0.45 + j0.05)}{(0.5054 - j0.131)(0.45 + j0.05) - (j0.2)(j0.2)} \)</p>                    
+                    <div class="equals">\( \frac{(1.875 ∠51.8^\circ)(0.45 + j0.05)}{(0.5054 - j0.131)(0.45 + j0.05) - (j0.2)(j0.2)} \)</div>                    
                 </div>
                 <p>V<sub>1</sub> = \( \frac{(1.875 ∠51.8^\circ)(0.4528 ∠6.34^\circ)}{0.27403 - j0.0337} \)</p> 
                 <p>V<sub>1</sub> = \( \frac{0.849 ∠58.14^\circ}{0.2761 ∠-7.01^\circ} \)</p>
