--- a/electronica/resistencia.html
+++ b/electronica/resistencia.html
@@ -56,7 +56,7 @@
                     <img src="media/resistencia3.jpg" alt="">
                 </div>
                 <h2>Cálculo</h2>
-                <p>Es necesario saber calcular el valor de la resistencia para poder obtener los valores deseados en nuestro circuito. Por lo que les dejo una imagen con los significados de cada banda dentro de las resistencias tradicionales.</p>
+                <p>Es necesario saber calcular el valor de la resistencia para poder obtener los valores deseados en nuestro circuito. En la siguiente imagen se tienen los significados de cada banda dentro de las resistencias tradicionales.</p>
                 <div class="blog-image-grande">
                     <img src="media/resistencia5.png" alt="">
                 </div>
