--- a/electronica/calculo.html
+++ b/electronica/calculo.html
@@ -631,7 +631,7 @@
                     </div>                    
                 </div>
                 <div class="matrix-division">
-                    <p>V<sub>2</sub></p>
+                    <div class="equals">V<sub>2</sub></div>
                     <div class="equals">=</div>
                     <div class="matrixDiv matrix-a">
                         
@@ -647,17 +647,16 @@
                         <div class="cell">j0.2</div>
                         <div class="cell">j0.2</div>
                         <div class="cell">0.45 + j0.05</div>
-                    </div>
-                    <div class="equals">=</div>
-                    <p>\( \frac{-(j0.2)(1.875 ∠51.8^\circ)}{(0.5054 - j0.131)(0.45 + j0.05) - (j0.2)(j0.2)} \)</p>                    
+                    </div>                   
                 </div>
+                <p>V<sub>2</sub> = \( \frac{-(j0.2)(1.875 ∠51.8^\circ)}{(0.5054 - j0.131)(0.45 + j0.05) - (j0.2)(j0.2)} \)</p>
                 <p>V<sub>2</sub> = \( \frac{(0.2 ∠-90^\circ)(1.875 ∠51.8^\circ)}{(0.22743 + j0.0253 - j0.059 + 0.0066) + 0.04} \)</p> 
                 <p>V<sub>2</sub> = \( \frac{0.375 ∠-38.2^\circ}{0.27403 - j0.0337} \)</p> 
                 <p>V<sub>2</sub> = \( \frac{0.375 ∠-38.2^\circ}{0.2761 ∠-7.01^\circ} \)</p>
                 <p>V<sub>2</sub> = \( 1.358 ∠-31.19^\circ \)</p> 
                 <br>
                 <div class="matrix-division">
-                    <p>V<sub>1</sub></p>
+                    <div class="equals">V<sub>1</sub></div>
                     <div class="equals">=</div>
                     <div class="matrixDiv matrix-a">
                         
@@ -673,10 +672,9 @@
                         <div class="cell">j0.2</div>
                         <div class="cell">j0.2</div>
                         <div class="cell">0.45 + j0.05</div>
-                    </div>
-                    <div class="equals">=</div>
-                    <div class="equals">\( \frac{(1.875 ∠51.8^\circ)(0.45 + j0.05)}{(0.5054 - j0.131)(0.45 + j0.05) - (j0.2)(j0.2)} \)</div>                    
+                    </div>                  
                 </div>
+                <p>V<sub>1</sub> = \( \frac{(1.875 ∠51.8^\circ)(0.45 + j0.05)}{(0.5054 - j0.131)(0.45 + j0.05) - (j0.2)(j0.2)} \)</p>
                 <p>V<sub>1</sub> = \( \frac{(1.875 ∠51.8^\circ)(0.4528 ∠6.34^\circ)}{0.27403 - j0.0337} \)</p> 
                 <p>V<sub>1</sub> = \( \frac{0.849 ∠58.14^\circ}{0.2761 ∠-7.01^\circ} \)</p>
                 <p>V<sub>1</sub> = \( 3.075 ∠65.15^\circ \)</p>
